[package]
name = "energyleaf-pi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
prost = "0.12.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

[build-dependencies]
prost-build = { version = "0.12.4" }
