[package]
name = "energyleaf-pi"
version = "0.4.2"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
libsql = "0.3.5"
mac_address = "1.1.7"
openssl = { version = "0.10", features = ["vendored"] }
energyleaf-proto = "0.2.1"
